# grab

./: .gitignore  LICENSE.txt  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.claude/: memory.md
.github/workflows/: build.yml
docs/: DISTRIBUTION.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  README.md  README_AI.md
docs/architecture/: DECISIONS.md  OVERVIEW.md
docs/design/: modern_editor_ux.md
docs/guides/: IMPLEMENTATION_GUIDE.md  REVIEW_GUIDE.md  SPEC_AUTHORING_GUIDE.md
docs/specs/: INDEX.md  SPEC-0001-screen-capture-mvp.md  SPEC-0002-menu-bar-and-shortcuts.md  SPEC-0003-capture-engine-electron.md  SPEC-0004-editor-ui-and-toolbar.md  SPEC-0004-editor-workflow.md  SPEC-0005-action-panel.md  SPEC-0006-profiles-and-library.md  tmp.md
docs/tasks/: INDEX.md  TASK-0001-capture-engine.md  TASK-0002-annotation-and-export.md  TASK-0003-e2e-testing.md  TASK-0004-tray-and-menu.md  TASK-0005-global-shortcuts.md  TASK-0006-settings-window.md  TASK-0007-electron-capture-engine.md
scripts/: build.sh  dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  commands.rs  error.rs  history.rs  lib.rs  main.rs  preferences.rs  tray.rs  types.rs
src-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src-ui/src/: App.tsx
src/main/: history.ts  index.ts  regionOverlay.ts  shortcuts.ts  tray.ts
src/renderer/: editor.ts  index.html  overlay.css  overlay.html  overlay.ts  renderer.ts  settings.css  settings.html  settings.ts  styles.css
(+32 files in other folders)
